sending updates on back-end

--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": "5432",
   "username": "postgres",
-  "password": "0000",
+  "password": "docker",
   "database": "gobarber",
   "entities": [
     "./src/models/*.ts"
