--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,13 +13,18 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
+    "@unform/core": "^2.1.0",
+    "@unform/mobile": "^2.1.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
-    "styled-components": "^5.1.0"
+    "react-native-vector-icons": "^6.6.0",
+    "styled-components": "^5.1.0",
+    "yup": "^0.28.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -27,8 +32,10 @@
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/jest": "^24.0.24",
     "@types/react-native": "^0.62.0",
+    "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-test-renderer": "16.9.2",
     "@types/styled-components": "^5.1.0",
+    "@types/yup": "^0.28.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "babel-jest": "^24.9.0",
